добавил таблиц и некоторые правки

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -328,3 +328,10 @@ table  {
     background-position: center;
     background-size: cover;
 }
+small {
+    font-weight: lighter;
+    font-size: .65em;
+}
+.w-35 {
+    width: 35%;
+}
