--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10567,3 +10567,12 @@ table tr.border-0 > * {
   background-position: center;
   background-size: cover;
 }
+
+small {
+  font-weight: lighter;
+  font-size: 0.65em;
+}
+
+.w-35 {
+  width: 35%;
+}
